--- a/studio.html
+++ b/studio.html
@@ -3,44 +3,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="text/javascript" src="js/functions.js"></script>
 
-<link rel="stylesheet" type="text/css" href="style.css" />
-<link rel="stylesheet" type="text/css" href="style-studio.css" />
+
+<link rel="stylesheet" type="text/css" href="style/reset.css" />
+<link rel="stylesheet" type="text/css" href="style/look.css" />
+<link rel="stylesheet" type="text/css" href="style/responsive.css" />
+<link rel="stylesheet" type="text/css" href="style/style.css" />
+<link rel="stylesheet" type="text/css" href="style/style-studio.css" />
+<link rel="stylesheet" href="nivo-zoom.css" type="text/css" media="screen" />
+
+
+
 <title>Untitled Document</title>
 </head>
 <body>
 	<div class="wrapper">
-		<div class="top-header">
-			<img class="logo" src="images/logo.png">
-			</ul>
-				<ul class="menu">
-				<li ><a href="index.html">Проекты</a></li>
-				<li class="active"><a href="studio.html">О студии</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-		</div>
-
-			<div class="imj">
-
+		<div class="container">
+			<div class="top-header">
+				<img class="logo" src="images/logo.png">
+				</ul>
+					<ul class="menu">
+					<li ><a href="index.html">Проекты</a></li>
+					<li  class="active"><a href="studio.html">О студии</a></li>
+					<li><a href="kontakts.html">Контакты</a></li>
+				</ul>
 			</div>
-<div class="text">
-<p>Мы</p>
-<p>Студия графического дизайна основана в 2015 году.</p>
-<p>Направления - графический дизайн, корпоративный брендинг, WEB дизайн.</p>
+		</div>			
+			<div class="content-logo">
+				<div class="row">
+					<div class="col-12">
+			<div class="logo-2">
+				<img  src="images/logo-2.png" >
+			</div>
+				</div>
+					</div>
+	
+
+
+<div class="text-position">
+	<div class="text-1">
+		<p >Мы</p>
+	</div>
+	<div class="text">
+		<p>Студия графического дизайна основана в 2015 году.</p>
+		<p>Направления - графический дизайн, корпоративный брендинг, WEB дизайн.</p>
+	</div>
+
+<div class="photo">
+	
+</div>
+<div class="photo">
+	
+</div>
+<div class="photo">
+	
+</div>
 
 
 
-<p>Основная наша задача это утоление постоянно растущих апетитов наших клиентов в современном дизайне,</p>
-<p>за тенденциями которого мы пристально следим, добавляя свои неповторимые, индивидуальные продукты.</p>
-
-<p>На нашем борту только дипломированные специалисты, которые оперативно помогут Вам получить</p>
-<p>желанный результат.</p>
-
-<p>У нас 2 локации с центральным расположением в Киеве и вторым представительством в Нью - Йорке</p>
-
-<p>Почему мы?</p>
-<p>Индивидуально, быстро, эффективно.</p>
+	<div class="text">
+		<p>Основная наша задача это утоление постоянно растущих апетитов наших клиентов в современном дизайне,</p>
+		<p>за тенденциями которого мы пристально следим, добавляя свои неповторимые, индивидуальные продукты.</p>
+	</div>
+	<div class="text">
+		<p>На нашем борту только дипломированные специалисты, которые оперативно помогут Вам получить</p>
+		<p>желанный результат.</p>
+		</div>
+	<div class="text">
+		<p>У нас 2 локации с центральным расположением в Киеве и вторым представительством в Нью - Йорке</p>
+	</div>
+	<div class="text-2">
+		<p >Почему мы?</p>
+	</div>
+	<div class="text-3">
+		<p>Индивидуально, быстро, эффективно.</p>
+	</div>
 </div>
 
 
@@ -48,17 +85,24 @@
 
 
 
+</div>
 
-
-
-
-		<div class="social">
-			<div class="be"><a href="https://www.behance.net/prannychuk"><img src="images/be.png"></a></div>
-			<div class="fb"><a href="#"><img src="images/fb.png"></a></div>
-			<div class="vk"><a href="#"><img src="images/vk.png"></a></div>
-			<div class="logo-end"><img src="images/nice.png"></div>
+	<footer class="row">
+		<div class="container row">
+			<div class="col-6 left">
+				<ul class="social">
+					<li class="be"><a href="https://www.behance.net/prannychuk"></a></li>
+					<li class="fb"><a href="#"></a></li>
+					<li class="vk"><a href="#"></a></li>
+				</ul>
+			</div>
+			<div class="col-6 right">
+				<div class="logo-end"><img src="images/nice.png"></div>
+			</div>
+		</div>
+		<div class="footer-bottom">
 			<div class="foot"><img src="images/foot.png"></div>
 		</div>
-	</div>
+	</footer>
 </body>
 </html>
