--- a/index.html
+++ b/index.html
@@ -3,58 +3,107 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="text/javascript" src="js/functions.js"></script>
 
-<link rel="stylesheet" type="text/css" href="style.css" />
+
+<link rel="stylesheet" type="text/css" href="style/reset.css" />
+<link rel="stylesheet" type="text/css" href="style/look.css" />
+<link rel="stylesheet" type="text/css" href="style/responsive.css" />
+<link rel="stylesheet" type="text/css" href="style/style.css" />
 <link rel="stylesheet" href="nivo-zoom.css" type="text/css" media="screen" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script src="js/jquery.nivo.zoom.pack.js" type="text/javascript"></script>
+
+
 
 <title>Untitled Document</title>
 </head>
 <body>
 	<div class="wrapper">
-		<div class="top-header">
-			<img class="logo" src="images/logo.png">
-			</ul>
-				<ul class="menu">
-				<li class="active"><a href="index.html">Проекты</a></li>
-				<li><a href="studio.html">О студии</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
+		<div class="container">
+			<div class="top-header">
+				<img class="logo" src="images/logo.png">
+				</ul>
+					<ul class="menu">
+					<li class="active"><a href="index.html">Проекты</a></li>
+					<li><a href="studio.html">О студии</a></li>
+					<li><a href="kontakts.html">Контакты</a></li>
+				</ul>
+			</div>
+			<div class="content-container">
+				<div class="row">
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-1.jpg" >
+						</div>
+						<div class="text-block">
+							<p>brandbook</p>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-2.jpg" >
+						</div>
+						<div class="text-block">
+							<p>ЛОГОТИП</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-3.jpg" >
+						</div>
+						<div class="text-block">
+							<p>IDENTITY</p>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-4.jpg" >
+						</div>
+						<div class="text-block">
+							<p>ПОЛИГРАФИЧЕСКИЙ</p>
+							<p>ДИЗАЙН</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-5.jpg" >
+						</div>
+						<div class="text-block">
+							<p>WEB/UI</p>
+							<p>DESIGN</p>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="img-block">
+							<img  src="images/blok-6.jpg" >
+						</div>
+						<div class="text-block">
+							<p>КРЕАТИВНЫЕ</p>
+							<p>РЕШЕНИЯ</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>			
+	</div>
+	<footer class="row">
+		<div class="container row">
+			<div class="col-6 left">
+				<ul class="social">
+					<li class="be"><a href="https://www.behance.net/prannychuk"></a></li>
+					<li class="fb"><a href="#"></a></li>
+					<li class="vk"><a href="#"></a></li>
+				</ul>
+			</div>
+			<div class="col-6 right">
+				<div class="logo-end"><img src="images/nice.png"></div>
+			</div>
 		</div>
-
-
-
-		<div class="bl">
-			<table class="blok">
-			<tr class="1">	
-			<td class="box" > 
-				
-					
-			<img  src="images/blok-1.jpg" >
-			
-			</td>
-			<td class="box"> <img src="images/blok-2.jpg"></td> 
-			</tr> 
-			<tr class="2">
-			<td class="box"> <img src="images/blok-3.jpg"></td>
-			<td class="box"> <img src="images/blok-4.jpg"></td>
-			</tr> 
-			<tr>
-			<td class="box"> <img src="images/blok-5.jpg"></td>
-			<td class="box"> <img src="images/blok-6.jpg"></td>
-			</tr>
-			</table>
-		</div>
-		</div>
-		<div class="social">
-			<div class="be"><a href="https://www.behance.net/prannychuk"><img src="images/be.png"></a></div>
-			<div class="fb"><a href="#"><img src="images/fb.png"></a></div>
-			<div class="vk"><a href="#"><img src="images/vk.png"></a></div>
-			<div class="logo-end"><img src="images/nice.png"></div>
+		<div class="footer-bottom">
 			<div class="foot"><img src="images/foot.png"></div>
 		</div>
-	
+	</footer>
 </body>
 </html>
