--- a/studio.html
+++ b/studio.html
@@ -21,14 +21,14 @@
 		<div class="container">
 			<div class="top-header">
 				<img class="logo" src="images/logo.png">
-				</ul>
+				
 					<ul class="menu">
 					<li ><a href="index.html">Проекты</a></li>
 					<li  class="active"><a href="studio.html">О студии</a></li>
 					<li><a href="kontakts.html">Контакты</a></li>
 				</ul>
 			</div>
-		</div>			
+				
 			<div class="content-logo">
 				<div class="row">
 					<div class="col-12">
@@ -37,7 +37,7 @@
 			</div>
 				</div>
 					</div>
-	
+	</div>
 
 
 <div class="text-position">
@@ -47,19 +47,9 @@
 	<div class="text">
 		<p>Студия графического дизайна основана в 2015 году.</p>
 		<p>Направления - графический дизайн, корпоративный брендинг, WEB дизайн.</p>
+	
 	</div>
-
-<div class="photo">
-	
-</div>
-<div class="photo">
-	
-</div>
-<div class="photo">
-	
-</div>
-
-
+		
 
 	<div class="text">
 		<p>Основная наша задача это утоление постоянно растущих апетитов наших клиентов в современном дизайне,</p>
@@ -81,11 +71,47 @@
 </div>
 
 
+	<div class="photo-wrapper">
+			<div class="row">
+		<div class="col-4">
+		<div class="photo-1">
+			<img  src="images/photo-1.jpg" >
+		</div>
+		<div class="text-photo-1">
+			<p class="pavel">Павел Пранничук</p>
+				<p>Руководитель студии и отдела </p>
+					<p>графического дизайна.</p>
+		</div>
+		</div>
 
+		<div class="col-4">
+		<div class="photo-2">
+			<img  src="images/photo-2.jpg" >
+		</div>
+		<div class="text-photo-2">
+			<p>Кобзев Сергей</p>
+			<p>Отдел WEB разаработок.</p>
+		</div>
+		</div>
 
+		<div class="col-4">
+		<div class="photo-3">
+			<img  src="images/photo-3.jpg" >
+		</div>
+		<div class="text-photo-3">
+			<p>Дмитрий Сабо</p>
+			<p>Рекламные технологии и наш</p>
+			<p>представитель в Нью Йорке.</p>
+		</div>
+		</div>
+	</div>
+	</div>
 
+</div>	
 
 </div>
+
+
 
 	<footer class="row">
 		<div class="container row">
