Added files via upload

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <link rel="stylesheet" type="text/css" href="style/reset.css" />
 <link rel="stylesheet" type="text/css" href="style/look.css" />
+<link rel="stylesheet" href="style/fonts/stylesheet.css" type="text/css"  />
+
 <link rel="stylesheet" type="text/css" href="style/responsive.css" />
 <link rel="stylesheet" type="text/css" href="style/style.css" />
 <link rel="stylesheet" href="nivo-zoom.css" type="text/css" media="screen" />
@@ -16,11 +18,12 @@
 <title>Untitled Document</title>
 </head>
 <body>
+	
 	<div class="wrapper">
 		<div class="container">
 			<div class="top-header">
 				<img class="logo" src="images/logo.png">
-				</ul>
+				
 					<ul class="menu">
 					<li class="active"><a href="index.html">Проекты</a></li>
 					<li><a href="studio.html">О студии</a></li>
