--- a/kontakts.html
+++ b/kontakts.html
@@ -4,12 +4,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-
+<link rel="stylesheet" href="style/fonts/stylesheet.css" type="text/css"  />
 <link rel="stylesheet" type="text/css" href="style/reset.css" />
 <link rel="stylesheet" type="text/css" href="style/look.css" />
+<link rel="stylesheet" href="style/kontakts.css" type="text/css"  />
 <link rel="stylesheet" type="text/css" href="style/responsive.css" />
 <link rel="stylesheet" type="text/css" href="style/style.css" />
 <link rel="stylesheet" href="nivo-zoom.css" type="text/css" media="screen" />
+
 
 
 
@@ -26,17 +28,62 @@
 					<li><a href="studio.html">О студии</a></li>
 					<li class="active"><a href="kontakts.html">Контакты</a></li>
 				</ul>
-			
+			<div class="map">			
+				<iframe  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d20327.243933576523!2d30.522253!3d50.442861!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce558c94ba35%3A0xc3f89f9793a7446a!2z0JHQtdGB0YHQsNGA0LDQsdGB0YzQutCwINC_0LsuLCA1LCDQmtC40ZfQsiwg0KPQutGA0LDQuNC90LA!5e0!3m2!1sru!2sua!4v1459199592248" width="1024" height="395" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+
+				<div class="contats-container row">
+					<div class="col-6 left contacts-block">
+						<div class="row contact">
+							<img  src="images/phone.png" class="icon">
+							<p>+38 (093) 12 34 567</p>
+						</div>
+						<div class="row contact">
+							<img  src="images/mail.png"  class="icon">
+							<p>nicelook@gmail.com</p>
+							<button class="border-btn">Написать</button>
+						</div>
+						<div class="row contact adress">
+							<img  src="images/location.png"  class="icon">
+							<div>
+								<p>Бессарабская площадь 5, офис 32</p>
+								<p>Украина, Киев</p>
+								<p>01001</p>
+							</div>
+						</div>
+						<div class="row contact info">
+							<div>
+								<p>Вы можете связатся с нами и получить</p>
+								<p>бесплатную консультацию, а также</p>
+								<p>просчитать стоимоcmть заказа.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-6 right">
+						<div class="filials">
+							<div>
+								<p>Наше представительство в Нью Йорке</p>
+							</div>
+							<div>
+								<p>Sabo Dmitry</p>
+								<p>19W 21 st St, New York , NY </p>
+							</div>
+							<div>
+								<p>Cell: +1 917-651-1533</p>
+								<p>Mail: sabodima@gmail.com</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<form action="form.php" method="POST" >
+					<div class="form row center">
+						<input  type="text" name="mytext" class="input center"  placeholder="Ваш телефон" >
+						<button type="submit" class="plane"></button>
+					</div>
+				</form>
 			</div>
 		</div>			
 	</div>
-				
-
-
-
-
-
-
 	<footer class="row">
 		<div class="container row">
 			<div class="col-6 left">
