--- a/studio.html
+++ b/studio.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-
+<link rel="stylesheet" href="style/fonts/stylesheet.css" type="text/css"  />
 <link rel="stylesheet" type="text/css" href="style/reset.css" />
 <link rel="stylesheet" type="text/css" href="style/look.css" />
 <link rel="stylesheet" type="text/css" href="style/responsive.css" />
@@ -84,22 +84,22 @@
 		</div>
 		</div>
 
-		<div class="col-4">
+		<div class="col-4 center">
 		<div class="photo-2">
 			<img  src="images/photo-2.jpg" >
 		</div>
 		<div class="text-photo-2">
-			<p>Кобзев Сергей</p>
+			<p class="sergey">Кобзев Сергей</p>
 			<p>Отдел WEB разаработок.</p>
 		</div>
 		</div>
 
-		<div class="col-4">
+		<div class="col-4 right" >
 		<div class="photo-3">
 			<img  src="images/photo-3.jpg" >
 		</div>
 		<div class="text-photo-3">
-			<p>Дмитрий Сабо</p>
+			<p  class="dmitriy">Дмитрий Сабо</p>
 			<p>Рекламные технологии и наш</p>
 			<p>представитель в Нью Йорке.</p>
 		</div>
